Fix: scrollbar

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -34,13 +34,6 @@ html {
   font-size: 15px;
 }
 
-body,
-html,
-main {
-  height: 100%;
-	overflow: auto;
-}
-
 body {
   font-family: $font-primary;
   line-height: 1.4;
